--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,42 @@
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/rabbit_trader_bridge
-spring.datasource.username=postgres
-spring.datasource.password=root
-
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+spring:
+  application:
+    name: trading-data-gateway
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  datasource:
+    url: jdbc:postgresql://localhost:5432/rabbit_trader_bridge?reWriteBatchedInserts=true
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 15
+      minimum-idle: 15
+      idle-timeout: 30000
+      max-lifetime: 2000000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
+      pool-name: SpringBootJPAHikariCP
+  jpa:
+    database: POSTGRESQL
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
+        enable_lazy_load_no_trans: true
+        order_inserts: true
+        order_updates: true
+        generate_statistics: false
+        jdbc:
+          batch_size: 1000000
+  flyway:
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+server:
+  shutdown: graceful
+  port: 5151
+logging:
+  level:
+    org.zalando.logbook: TRACE
