--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       connection-test-query: SELECT 1
       pool-name: SpringBootJPAHikariCP
   jpa:
-    database: POSTGRESQL
+    database: MYSQL
     show-sql: false
     properties:
       hibernate:
@@ -36,7 +36,7 @@ spring:
     locations: classpath:db/migration
 server:
   shutdown: graceful
-  port: 80
+  port: 8080
 logging:
   level:
     org.zalando.logbook: TRACE
